Add send contract functionality and updated swagger
