# server/src/swagger/swagger-output.json
@@ -5,7 +5,7 @@
     "description": "Contract HUB : Webiste Backend",
     "version": "1.0.0"
   },
-  "host": "192.168.100.47:9090",
+  "host": "http://localhost:9090",
   "basePath": "/",
   "schemes": [
     "http"
@@ -374,6 +374,41 @@
             "name": "authorization",
             "in": "header",
             "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/user/sendContract": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "documentId": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
